--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -49,19 +49,10 @@
 .service__list p {
     font-size: 0.9rem;
 }
-
-/* MEDIA QUERIES (SMALL DEVICES) */
-
-@media screen and (max-width: 600px) {
-    .services__container {
-        grid-template-columns: 1fr;
-        gap: 1.5rem;
-    }
-  }
   
   /* MEDIA QUERIES (MEDIUM DEVICES) */
   
-  @media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .services__container {
         grid-template-columns: 1fr 1fr;
         gap: 2rem;
@@ -69,5 +60,14 @@
 
     .service {
         height: auto;
+    }
+}
+
+/* MEDIA QUERIES (SMALL DEVICES) */
+
+@media only screen and (max-device-width: 600px) {
+    .services__container {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
     }
   }
