--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -64,9 +64,27 @@
     color: var(--color-light);
 }
 
+/* MEDIA QUERIES (MEDUIM DEVICES) */
+
+@media screen and (max-width: 1024px) {
+    .about__container {
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+
+    .about__me {
+        width: 50%;
+        margin: 2rem auto 4rem;
+    }
+
+    .about__content p{
+        margin: 1rem 0 1.5rem;
+    }
+}
+
 /* MEDIA QUERIES (SMALL DEVICES) */
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-device-width: 600px) {
     .about__me {
         width:  65%;
         margin: 0 auto 3rem;
@@ -83,23 +101,5 @@
 
     .about__content p {
         margin: 1.5rem 0;
-    }
-}
-
-/* MEDIA QUERIES (MEDUIM DEVICES) */
-
-@media screen and (max-width: 1024px) {
-    .about__container {
-        grid-template-columns: 1fr;
-        gap: 0;
-    }
-
-    .about__me {
-        width: 50%;
-        margin: 2rem auto 4rem;
-    }
-
-    .about__content p{
-        margin: 1rem 0 1.5rem;
     }
 }
