--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -58,15 +58,6 @@ input, textarea {
     color: var(--color-white);
 }
 
-/* * MEDIA QUERIES (SMALL DEVICES) */
-
-@media screen and (max-width: 600px) {
-    .container.contact__container {
-        width: var(--container-width-sm);
-        background: black;
-    }
-}
-
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 
 @media screen and (max-width: 1024px) {
@@ -74,4 +65,12 @@ input, textarea {
         grid-template-columns: 1fr;
         gap: 2rem
     }  
+}
+
+/* * MEDIA QUERIES (SMALL DEVICES) */
+
+@media only screen and (max-device-width: 600px) {
+    .container.contact__container {
+        width: var(--container-width-sm);
+    }
 }
