--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -41,19 +41,6 @@
     color: var(--color-primary)
 }
 
-/* MEDIA QUERIES (SMALL DEVICES) */
-
-@media screen and (max-width: 600px) {
-    .experience__container {
-        gap: 1rem;
-    }
-
-    .experience__container > div {
-        width: 100%;
-        padding: 2rem 1rem;
-    }
-}
-
 /* MEDIA QUERIES (MEDUIM DEVICES) */
 
 @media screen and (max-width: 1024px) {
@@ -69,5 +56,18 @@
 
     .experience__content {
         padding: 1rem;
+    }
+}
+
+/* MEDIA QUERIES (SMALL DEVICES) */
+
+@media only screen and (max-device-width: 600px) {
+    .experience__container {
+        gap: 1rem;
+    }
+
+    .experience__container > div {
+        width: 100%;
+        padding: 2rem 1rem;
     }
 }
