--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -64,22 +64,22 @@ header {
     font-size: 0.9rem;
 }
 
+/* MEDIA QUERIES (MEDUIM DEVICES) */
+ 
+@media screen and (max-width: 1024px) {
+    header {
+        height: 68vh;
+      }
+}
+
 /* MEDIA QUERIES (SMALL DEVICES) */
 
-@media screen and (max-width: 600px) {
-    .header {
+@media only screen and (max-device-width: 600px) {
+    header {
         height: 100vh;
       }
   
     .header__socials, .scroll__down {
         display: none;
     }
-}
-
-/* MEDIA QUERIES (MEDUIM DEVICES) */
- 
-@media screen and (max-width: 1024px) {
-    .header {
-        height: 68vh;
-      }
 } 
