--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -42,7 +42,7 @@
 
 /* MEDIA QUERIES (SMALL DEVICES) */
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-device-width: 600px) {
     .container.testimonials__container {
         width: var(--container-width-sm);
     }
