--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   padding: 0;
   border: 0;
   outline: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
   list-style: none;
   text-decoration: none;
 }
@@ -21,7 +21,7 @@
   --transition: all 400ms ease;
 
   --container-width-lg: 75%;
-  /* --container-width-md: 86%; */
+  --container-width-md: 86%;
   --container-width-sm: 90%;
 }
 
@@ -110,26 +110,26 @@ img {
   object-fit: cover;
 }
 
-/* MEDIA QUERIES (SMALL DEVICES) */
-
-@media screen and (max-width: 600px) {
-  .container {
-    width: var(--container-width-sm);
-  }
-
-  section > h2{
-    margin-bottom: 2rem;
-  }
-}
-
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 
 @media screen and (max-width: 1024px) {
-  .container {
+  .container {  
     width: var(--container-width-md);
   }
 
   section {
     margin-top: 6rem;
+  }
+}
+
+/* MEDIA QUERIES (SMALL DEVICES) */
+
+@media only screen and (max-device-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2 {
+    margin-bottom: 2rem;
   }
 }
